<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marina.tennisscore.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ball2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/_1st_player"
                android:textColor="@color/colorAccent"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/score_player_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:gravity="center"
                android:text="@string/_0"
                android:textSize="64sp" />

            <Button
                android:id="@+id/button_player_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:onClick="plusPointOne"
                android:text="@string/points" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/_2nd_player"
                android:textColor="@color/colorAccent"
                android:textSize="28sp" />


            <TextView
                android:id="@+id/score_player_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:gravity="center"
                android:text="@string/_0"
                android:textSize="64sp" />

            <Button
                android:id="@+id/button_player_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:onClick="plusPointTwo"
                android:text="@string/points" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/win_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textSize="26sp" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="26dp"
        android:onClick="resetClick"
        android:text="@string/reset" />

</RelativeLayout>
